feat: déploiement Render + Vercel (profil prod H2, CORS multi-origines, VITE_API_URL)